# skyplane

./: .dockerignore  .gitignore  .pylintrc  .pytype.cfg  .readthedocs.yml  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.broadcast  MANIFEST.in  Makefile  README.md  big  cmd.log_cmdonly  dst_03c4d9964e324b3db091c4cbf6f2b0ae  environment.yml  experiment.sh  export.json  flake.nix  gurobi.env  network_aws.sh  network_azure.sh  network_gcp.sh  network_inter.sh  out.patch  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements.txt  setup.py  setup_bucket.py  setup_buckets.sh  src_03c4d9964e324b3db091c4cbf6f2b0ae  src_2a7bdfa940f749d6913ec6a5062335ab  test  test_log
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/disabled/: poetry-publish-nightly.yml  poetry-publish.yml
.github/disabled_workflows/: pytest.yml
.github/workflows/: codeql-analysis.yml  docker-publish-ibm.yml  docker-publish.yml  integration-test-local.yml  integration-test-multiple-sizes.yml  integration-test-sync-deprovision.yml  integration-test.yml  lint.yml  poetry-publish-nightly.yml  poetry-publish.yml  poetry.yml  pypi.yml  pytest.yml  pytest_integration.yml  pytype.yml  pytype_pylint.yml  sphinx-build.yml  sphinx-check.yml  sphinx-deploy.yml  sphinx.yml  test.yml  unit-test.yml
docs/: Benchmarks.md  README.md  architecture.md  benchmark.md  benchmark_replicate.md  build_from_source.md  build_guide.md  conf.py  configure.md  contributing.md  contributing.rst  debugging.md  development_guide.md  faq.md  increase_vcpus.md  index.rst  installation.rst  modules.rst  on-prem_setup.md  overview.md  permissions.md  permissions.rst  programmable_gateway.md  quickstart.md  quickstart.rst  requirements-doc.txt  requirements.txt  roadmap.md  skylark.rst  skylark_cli.rst  skyplane.rst  skyplane_api.rst  skyplane_cli.rst  skyplane_cli_internal.rst  skyplane_internal.rst  summary.md  tutorial_airflow.md  tutorial_dataloader.md  usage.rst  usage_stats_collection.md  (+1 more)
docs/_api/: skyplane.api.client.rst  skyplane.api.config.rst  skyplane.api.dataplane.rst  skyplane.api.provisioner.rst  skyplane.api.rst  skyplane.api.tracker.rst  skyplane.api.transfer_config.rst  skyplane.api.transfer_job.rst  skyplane.api.usage.rst
docs/_templates/: base.html
docs/contributing/: index.rst  test.rst
docs/source/: conf.py  index.rst
examples/: README.md  airflow_operator.py  api_demo.py  aws_bucket_replication.py  pytorch_training.py
nb/: 01-04-2021_plot_udp_throughput.ipynb  01-04-2022_plot_udp_throughput.ipynb  01-09-2022_evaluate_triangle_costs.ipynb  01-10-2022_plot_benchmark_triangles.ipynb  01-12-2022_plot_multiple_connections.ipynb  01-16-2021_throughput_mini.ipynb  01-16-2022_throughput_mini.ipynb  01-21-2022_visualize_pareto.ipynb  01-31-2022_plot_baseline_cloud_transfers.ipynb  01-32-2022_visualize_pareto.ipynb  01.10.2022_plot_benchmark_triangles.ipynb  02-04-22-baseline-results.ipynb  02-10-22_baseline_results_replot.ipynb  02-16-2022_log_to_perfetto.ipynb  04-14-2022_plot_intrainter_network.ipynb  04-17-22_plot_one_hop.py  11-16-2021_plot_latency.ipynb  11-16-2021_plot_throughput.ipynb  11-22-2021_plot_throughput_time.ipynb  11-22-2021_throughput_solver.ipynb  12-02-2021_gcp_premium_standard.ipynb  12-11-2021_get_transfer_cost.ipynb  12-12-2021_visualize_pareto.ipynb  plot_latency.ipynb  plot_throughput.ipynb
nb/.ipynb_checkpoints/: plot_latency-checkpoint.ipynb
nb/streamlit/: 04.17.22_gbps_per_dollar.py  04.17.22_visualize_one_hop_plans.py  common.py  plot_histogram.py  plot_pareto.py  visualize_one_hop_plans.py
profiles/: aws_transfer_costs.csv  gcp_intracloud_throughput.csv  latency.csv  throughput.csv  throughput_mini.csv
scripts/: az_cleanup.sh  bench_multipart.sh  benchmark_queues.py  build_docs.sh  checkpy.sh  create_test_data.py  experiment.sh  experiment_paras.sh  get_random_word_hash.sh  install_cbc.sh  pack_docker.sh  pack_docker_broadcast.sh  plot_socket_profile.py  requirements-broadcast-gateway.txt  requirements-gateway.txt  setup.sh  setup_bucket.py  test_gateway.sh  upload_test_file.py
scripts/experiments/: ablation.sh  benchmark_triangles.sh  datasync_random_overlay.sh  launch_benchmark_triangles.sh  test_triangles.sh
scripts/gen_data/: gen_many_small.py  gen_sorted.py
scripts/on_prem/: benchmark.py  hostname
scripts/ray_cluster/: README.md  cluster_shishir.yaml  config_paras.yaml  run.sh  script.py
scripts/tradeoff/: eval.sh  run.sh
scripts/utils/: get_random_word_hash.sh
skydata/: provision_instances.py  server.py
skylark/: __init__.py  chunk.py  cloud_providers.py  config.py  exceptions.py  server.py  solver.py  utils.py
skylark/benchmark/: pareto_speedups.py  provision_instances.py  stop_all_instances.py  utils.py  visualize_overlay_graphs.py  visualize_traceroute.py  viz_grpahs.py
skylark/cli/: cli.py  cli_aws.py  cli_azure.py  cli_gcp.py  cli_helper.py  cli_internal.py  cli_solver.py  util.py
skylark/compute/: cloud_providers.py  server.py  util.py  utils.py
skylark/control_plane/: config.yaml  script.py
skylark/gateway/: chunk.py  chunk_header.py  chunk_store.py  gateway.py  gateway_api.py  gateway_daemon.py  gateway_daemon_api.py  gateway_obj_store.py  gateway_receiver.py  gateway_reciever.py  gateway_sender.py  wire_protocol_header.py
skylark/obj_store/: azure_interface.py  azure_keys.py  gcs_interface.py  object_store_interface.py  s3_interface.py
skylark/replicate/: chunk_store.py  gateway.py  gateway_client.py  gateway_server.py  obj_store.py  obj_store_interface.py  profiler.py  replication_plan.py  replicator.py  (+5 more)
skyplane/: __init__.py  chunk.py  config.py  config_paths.py  demo.py  exceptions.py  gateway_version.py  test_broadcast.py  test_pipeline.py  vcpu.ipynb
src/: README.md  gfg-client.cpp  gfg-server.cpp  main.cpp  redistest.c  skylark-db.py  skylark.cpp  skylark.h  solver.cpp
static/: index.html
tests/: interface_bigquery_util.py  interface_util.py  test_azure.py  test_azure_interface.py  test_fall_back.py  test_gcs_interface.py  test_interface.py  test_s3_interface.py  test_utils.py
(+343 files in other folders)
