[tool.poetry]
name = "skyplane"
packages = [{ include = "skyplane" }]
version = "0.1.2"
description = "Skyplane efficiently transports data between cloud regions and providers."
authors = ["Skyplane authors <skyplaneproject@gmail.com>"]
license = "Apache-2.0"
homepage = "https://skyplane.org/"
repository = "https://github.com/skyplane-project/skyplane"
documentation = "https://skyplane.org/"
readme = "README.md"
include = ["profiles/*"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
azure-identity = "^1"
azure-mgmt-authorization = ">=1.0.0"
azure-mgmt-compute = ">=24.0.0"
azure-mgmt-network = ">=10.0.0"
azure-mgmt-resource = ">=11.0.0"
azure-mgmt-storage = ">=11.0.0"
azure-storage-blob = ">=12.0.0"
boto3 = ">=1.16.0"
cachetools = ">=4.1.0"
click = ">=8.0.0"
google-api-python-client = ">=2.0.2"
google-auth = ">=2.0.0"
google-cloud-compute = ">=1.0.0"
google-cloud-storage = ">=1.30.0"
pandas = ">=1.0.0"
paramiko = ">=2.7.2"
rich = ">=9.0.0"
sshtunnel = ">=0.3.0"
typer = ">=0.4.0"

# solver dependencies
cvxpy = { version = ">=1.1.0", optional = true, extras = ["cvxopt"] }
graphviz = { version = ">=0.15", optional = true }
matplotlib = { version = ">=3.0.0", optional = true }
numpy = { version = ">=1.19.0", optional = true }

# gateway dependencies
flask = { version = "^2.1.2", optional = true }
lz4 = { version = "^4.0.0", optional = true }
pynacl = { version = "^1.5.0", optional = true }
pyopenssl = { version = "^22.0.0", optional = true }
werkzeug = { version = "^2.1.2", optional = true }

[tool.poetry.extras]
gateway = ["flask", "lz4", "pynacl", "pyopenssl", "werkzeug"]
solver = ["cvxpy", "graphviz", "matplotlib", "numpy"]

[tool.poetry.dev-dependencies]
black = ">21.3.0"
pytest = ">=6.0.0"
pytest-cov = ">=2.10.0"
pytest-xdist = ">=2.0.0"
pytype = ">=2022"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skylark = "skyplane.cli.cli:app"
skyplane = "skyplane.cli.cli:app"
