[tool.poetry]
name = "skyplane"
packages = [{ include = "skyplane" }]
version = "0.3.1"
description = "Skyplane efficiently transports data between cloud regions and providers."
authors = ["Skyplane authors <skyplaneproject@gmail.com>"]
license = "Apache-2.0"
homepage = "https://skyplane.org/"
repository = "https://github.com/skyplane-project/skyplane"
documentation = "https://skyplane.org/"
readme = "README.md"
include = ["skyplane/data/*"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
boto3 = ">=1.16.0"
cachetools = ">=4.1.0"
cryptography = ">=1.4.0"
pandas = ">=1.0.0"
paramiko = ">=2.7.2"
questionary = ">=1.8.0"
requests = ">=2.23.0"
rich = ">=9.0.0"
sshtunnel = ">=0.3.0"
typer = ">=0.4.0"

# azure dependencies
azure-identity = { version = ">=1.0.0", optional = true }
azure-mgmt-authorization = { version = ">=1.0.0", optional = true }
azure-mgmt-compute = { version = ">=24.0.0", optional = true }
azure-mgmt-network = { version = ">=10.0.0", optional = true }
azure-mgmt-resource = { version = ">=11.0.0", optional = true }
azure-mgmt-storage = { version = ">=11.0.0", optional = true }
azure-mgmt-subscription = { version = ">=1.0.0", optional = true }
azure-storage-blob = { version = ">=12.0.0", optional = true }

# gcp dependencies
google-api-python-client = { version = ">=2.0.2", optional = true }
google-auth = { version = ">=2.0.0", optional = true }
google-cloud-compute = { version = ">=1.0.0", optional = true }
google-cloud-storage = { version = ">=1.30.0", optional = true }
google-cloud-dataproc = { version = "^5.4.0", optional = true }

# solver dependencies
cvxpy = { version = ">=1.1.0", optional = true, extras = ["cvxopt"] }
graphviz = { version = ">=0.15", optional = true }
matplotlib = { version = ">=3.0.0", optional = true }
numpy = { version = ">=1.19.0", optional = true }

# gateway dependencies
flask = { version = "^2.1.2", optional = true }
lz4 = { version = "^4.0.0", optional = true }
pynacl = { version = "^1.5.0", optional = true }
pyopenssl = { version = "^22.0.0", optional = true }
werkzeug = { version = "^2.1.2", optional = true }
pyarrow = "^10.0.1"

[tool.poetry.extras]
aws = ["boto3"]
azure = ["azure-identity", "azure-mgmt-authorization", "azure-mgmt-compute", "azure-mgmt-network", "azure-mgmt-resource", "azure-mgmt-storage", "azure-mgmt-quota", "azure-mgmt-subscription", "azure-storage-blob"]
gcp = ["google-api-python-client", "google-auth", "google-cloud-compute", "google-cloud-storage"]
all = ["boto3", "azure-identity", "azure-mgmt-authorization", "azure-mgmt-compute", "azure-mgmt-network", "azure-mgmt-resource", "azure-mgmt-storage", "azure-mgmt-subscription", "azure-storage-blob", "google-api-python-client", "google-auth", "google-cloud-compute", "google-cloud-storage"]
gateway = ["flask", "lz4", "pynacl", "pyopenssl", "werkzeug"]
solver = ["cvxpy", "graphviz", "matplotlib", "numpy"]

[tool.poetry.dev-dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=2.10.0"
pytest-xdist = ">=2.0.0"
black = "^23.1.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skylark = "skyplane.cli.cli:app"
skyplane = "skyplane.cli.cli:app"
